[#52031901] - User profile styles started, side bar styles completed this include users profile image, StudyPoint scores and friends list

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1218,7 +1218,102 @@ nav input{
 	color: #E67E22;
 }
 
+/* ==========================================================================
+   Profile Styles
+   ========================================================================== 
+*/
 
+
+.user-profile aside{
+	width: 200px;
+	background-color: #FFF;
+	margin-left: 10px;
+	margin-right: 20px;
+	padding: 0 10px;
+	overflow: hidden;
+}
+
+.user-profile aside > img{
+	margin-top: 20px;
+}
+
+.user-profile .level-progress{
+	width: 180px;
+}
+
+.user-profile .level-progress span{
+	margin: 0;
+}
+
+.user-profile .level-progress span:nth-child(4){
+	width: 28%;
+}
+
+.user-profile .level-progress span:nth-child(2) span{
+	width: 87%;
+}
+
+.user-profile aside > p{
+	font-size: 14px;
+	font-weight: 700;
+}
+
+.user-profile aside > p span{
+	float: right;
+}
+
+.friends-list h2{
+	float: left;
+	margin: 10px 0 20px; 0;
+	padding: 0;
+}
+
+.friend{
+	clear: both;
+	overflow: hidden;
+	padding: 0;
+	margin: 20px 0;
+	font-size: 12px;
+}
+
+.friend img{
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+
+.friend h3{
+	font-weight: 600;
+	margin: 5px 0 0 20px;
+	display: inline-block;
+}
+
+.friend h3 a{
+	text-decoration: none;
+	color: #000;
+}
+
+.friend h3 a:hover{
+	color: #E67E22;
+}
+
+.friend p{
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+	margin: 5px 0 0 22px;
+}	
+
+.friends-list p:last-child a{
+	float: right;
+	text-decoration: none;
+	color: #000;
+	padding-bottom: 10px;
+}
+
+.friends-list p:last-child a:hover{
+	color: #E67E22;
+}
 
 /* ==========================================================================
    Footer Styles
