--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -418,20 +418,42 @@ nav input{
 	margin-top: 50px;
 }
 
+.signup.facebook input{
+	margin-top: 5px;
+}
+
 .signup p:last-child{
 	text-align: center;
 	margin: 40px 0;
 }
 
-.signup p:last-child a{
+.login-link a{
 	text-decoration: none;
 	color: #E67E22;
 }
 
-.signup p:last-child a:hover{
+.login-link a:hover{
 	text-decoration: underline;
 }
 
+/* ==========================================================================
+   Facebook Sign Up Styles
+   ========================================================================== 
+*/
+
+.signup.facebook label{
+	padding: 0;
+	margin: 0;
+}
+
+.sug-username{
+	position: relative;
+	font-size: 11px;
+	text-align: right;
+	top: 35px;
+	left: 270px;
+	color: #E67E22;
+}
 
 /* ==========================================================================
    Login Styles
@@ -482,7 +504,7 @@ nav input{
 }
 
 .twitter-btn a{
-	margin-left: 70px;
+	margin-left: 50px;
 }
 
 .fb-btn{
