--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1933,6 +1933,64 @@ nav input{
 }
 
 /* ==========================================================================
+   Quiz Styles
+   ========================================================================== 
+*/
+
+.quiz .study-content{
+	overflow: auto;
+}
+
+.quiz aside{
+	margin: 0 0 20px 0;
+	overflow: auto;
+	width: 220px;
+	background: #fff;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	float: left;
+}
+
+.quiz .header{
+ 	overflow: auto; 
+	background-color: #54544D;
+	padding: 0 5px;
+	height: 40px;
+	color: #FFF:
+}
+
+.quiz .header h2{
+	margin: 0;
+	padding: 10px;
+	float: left;
+	font-size: 16px;
+	font-weight: 500;
+	color: #FFF;
+}
+
+.quix .header p{
+	float: right;
+	margin-right: 10px;
+	vertical-align: middle;
+	line-height: 100%;
+	color: #FFF;
+}
+
+.quiz .header p img{
+	margin-right: 5px;
+}
+
+.skip, .next{
+
+}
+
+.skip, .next{
+	width: 50px;
+	height: 40px;
+}
+
+/* ==========================================================================
    Footer Styles
    ========================================================================== 
 */
