[#53045555] User dashboard sort by oldest working correctly and styles fixed

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -880,7 +880,10 @@ nav input{
 
 .deck:nth-child(odd){
 	margin-right: 0;
-	float: right;
+}
+
+.deck:nth-child(even){
+	margin-left: 20px;
 }
 
 .deck .deck-info{
