--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -251,6 +251,10 @@ nav input{
 	border: 1px solid #E67E22;
 	margin-left: 85px;
 	padding-left: 5px;
+	background-image: url('../img/icons/search.png');
+	background-repeat: no-repeat;
+	background-size: 30px auto;
+	background-position: right;
 }
 
 .notification-count{
