--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -262,7 +262,7 @@ nav input{
 	background: #E67E22;
 	border: 1px solid #FFF;
 	padding: 2px 6px;
-	margin: 0 0 0 10px;
+	margin: 0 10px 0 0;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;	
