[#53746531] - Correct information from quiz results being received

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2187,6 +2187,19 @@ img + span{
 	display: none;
 }
 
+
+.results{
+	/*display: none;*/
+}
+
+.correct-answer{
+	color: green;
+}
+
+.your-answer{
+	color: red;
+}
+
 /* ==========================================================================
    Footer Styles
    ========================================================================== 
