[#53746531] - Results page displaying skipped questions with choices after quiz is finished.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2126,7 +2126,7 @@ img + span{
 	margin-top: 75px;
 }
 
-.quiz-content{
+.quiz-content, .results{
 	width: 700px;
 	float: right;
 	/*overflow: visible;*/
@@ -2189,7 +2189,7 @@ img + span{
 
 
 .results{
-	/*display: none;*/
+	display: none;
 }
 
 .correct-answer{
